applications/teams/foresters/customerportalui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customerportalui
  labels:
    app: customerportalui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: customerportalui
